// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`offset pagination renders a pagination component 1`] = `
.c9 {
  vertical-align: middle;
  height: 2rem;
  width: 2rem;
}

.c14 {
  vertical-align: middle;
}

.c1 {
  box-sizing: border-box;
}

.c10 {
  display: none;
  box-sizing: border-box;
  z-index: 1060;
}

.c4 {
  flex-direction: row;
  display: flex;
}

.c2 {
  flex-shrink: 0;
}

.c6 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding-right: 0.5rem;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c6:focus {
  outline: none;
}

.c6[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c6+.bd-button {
  margin-top: 0.5rem;
}

.c6:active {
  background-color: #DBE3FE;
}

.c6:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c6:hover:not(:active) {
  background-color: #F0F3FF;
}

.c6[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c13 {
  transition: all 150ms ease-out;
  transition-property: background-color,border-color,box-shadow,color;
  align-items: center;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c13:focus {
  outline: none;
}

.c13[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c13+.bd-button {
  margin-top: 0.5rem;
}

.c13:active {
  background-color: #DBE3FE;
}

.c13:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c13:hover:not(:active) {
  background-color: #F0F3FF;
}

.c13[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c8 {
  align-content: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c11 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.c12 {
  border-radius: 0.25rem;
  box-shadow: 0px 1px 6px rgba(49,52,64,0.2);
  background-color: #FFFFFF;
  color: #313440;
  margin: 0;
  max-height: 15.625rem;
  outline: none;
  overflow-y: auto;
  padding: 0.5rem 0;
  z-index: 1060;
}

.c5 {
  position: relative;
}

.c7 {
  color: #313440;
  width: auto;
}

.c3 {
  margin-left: auto;
}

.c0 {
  align-items: center;
  flex-direction: row;
  justify-content: stretch;
  background-color: #FFFFFF;
  display: flex;
  padding: 0.75rem 1.5rem;
}

@media (min-width: 720px) {
  .c6+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c6 {
    width: auto;
  }
}

@media (min-width: 720px) {
  .c13+.bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width: 720px) {
  .c13 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<div
  aria-controls="_r_14_"
  aria-label="Table Controls"
  class="c0"
  role="toolbar"
>
  <div
    class="c1 c2 c3"
  >
    <div
      aria-label="pagination"
      class="c1 c4"
      role="navigation"
    >
      <div
        class="c1 "
      >
        <div
          class="c1 c5"
        >
          <button
            aria-activedescendant=""
            aria-controls="_r_15_-menu"
            aria-expanded="false"
            aria-haspopup="menu"
            class="c6 c7"
            id="_r_15_-toggle-button"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="c8"
            >
              1 - 3 of 5
              <svg
                aria-hidden="true"
                class="c9"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m8.71 11.71 2.59 2.59c.39.39 1.02.39 1.41 0l2.59-2.59c.63-.63.18-1.71-.71-1.71H9.41c-.89 0-1.33 1.08-.7 1.71"
                />
              </svg>
            </span>
          </button>
          <div
            class="c10"
            style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 4px);"
          >
            <div
              class="c11"
            >
              <ul
                aria-labelledby="_r_15_-label"
                class="c12"
                id="_r_15_-menu"
                role="menu"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 "
      >
        <button
          class="c13 c7"
          disabled=""
          type="button"
        >
          <span
            class="c8"
          >
            <svg
              aria-labelledby="_r_19_"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <title
                id="_r_19_"
              >
                Previous page
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41"
              />
            </svg>
          </span>
        </button>
        <button
          class="c13 c7"
          type="button"
        >
          <span
            class="c8"
          >
            <svg
              aria-labelledby="_r_1a_"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <title
                id="_r_1a_"
              >
                Next page
              </title>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders a simple table 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  align-items: center;
  flex-direction: row;
  display: flex;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c4 {
  justify-content: flex-start;
}

.c6 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  border-bottom: 1px solid #D9DCE9;
}

.c6:first-of-type {
  padding-left: 1.5rem;
}

.c6:last-of-type {
  padding-right: 1.5rem;
}

.c5 {
  transition: all 150ms ease-out;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
  opacity: 1;
  outline: none;
  outline-offset: -2px;
  pointer-events: auto;
}

.c5:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

<table
  class="c0"
  id="_r_0_"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c2 c3 c4"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c2 c3 c4"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c2 c3 c4"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        SM13
      </td>
      <td
        class="c6"
      >
        [Sample] Smith Journal 13
      </td>
      <td
        class="c6"
      >
        25
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        DPB
      </td>
      <td
        class="c6"
      >
        [Sample] Dustpan & Brush
      </td>
      <td
        class="c6"
      >
        34
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        OFSUC
      </td>
      <td
        class="c6"
      >
        [Sample] Utility Caddy
      </td>
      <td
        class="c6"
      >
        45
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CLC
      </td>
      <td
        class="c6"
      >
        [Sample] Canvas Laundry Cart
      </td>
      <td
        class="c6"
      >
        2
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CGLD
      </td>
      <td
        class="c6"
      >
        [Sample] Laundry Detergent
      </td>
      <td
        class="c6"
      >
        29
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a table figure 1`] = `
.c0 {
  margin: 0;
  max-width: 100%;
  overflow-x: auto;
  white-space: nowrap;
}

@media (min-width: 720px) {
  .c0 {
    white-space: normal;
  }
}

<figure
  class="c0"
/>
`;

exports[`selectable renders selectable actions and checkboxes 1`] = `
.c9 {
  vertical-align: middle;
}

.c1 {
  margin-right: 0.25rem;
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
}

.c13 {
  margin-right: 1rem;
  box-sizing: border-box;
}

.c4 {
  flex-direction: row;
  display: flex;
}

.c2 {
  flex-shrink: 0;
}

.c12 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin-left: 0.75rem;
}

.c12:last-child {
  margin-bottom: 0;
}

.c14 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0;
}

.c14:last-child {
  margin-bottom: 0;
}

.c11 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c11:last-child {
  margin-bottom: 0;
}

.c10 {
  margin-left: 0.5rem;
}

.c5 {
  align-items: flex-start;
  display: flex;
}

.c7 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 {
  transition: all 150ms ease-out;
  transition-property: border-color,background,box-shadow,color,opacity;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-flex;
  height: 1.25rem;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  user-select: none;
  width: 1.25rem;
}

.c8:hover {
  border-color: #B4BAD1;
}

.c6:focus+.c8 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c8 svg {
  opacity: 0;
}

.c0 {
  align-items: center;
  flex-direction: row;
  justify-content: stretch;
  background-color: #FFFFFF;
  display: flex;
  padding: 0.75rem 1.5rem;
}

<div
  aria-controls="_r_3c_"
  aria-label="Table Controls"
  class="c0"
  role="toolbar"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3 c4"
    >
      <div
        class="c5"
      >
        <input
          aria-checked="false"
          aria-labelledby="_r_3e_"
          class="c6 c7"
          id="_r_3d_"
          type="checkbox"
        />
        <label
          aria-hidden="true"
          class="c8"
          for="_r_3d_"
        >
          <svg
            aria-hidden="true"
            class="c9"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
            />
          </svg>
        </label>
        <div
          class="c10"
        >
          <label
            class="c11"
            for="_r_3d_"
            hidden=""
            id="_r_3e_"
          >
            Select All
          </label>
        </div>
      </div>
      <p
        class="c12"
      >
        5
      </p>
    </div>
  </div>
  <div
    class="c13 c2"
  >
    <p
      class="c14"
    >
      Product
    </p>
  </div>
</div>
`;
